<resources>
    <string name="app_name" translatable="false">Object Detection in Real Time</string>
    <string name="language">Language</string>
    <string name="scoreThreshold">Score \nThreshold</string>
    <string name="bndboxStrokeWidth">Boundbox \nstroke width</string>
    <string name="resultsTextSize">Results \ntext size</string>
    <string name="maxDetecionsResult">Max detections \nresults</string>
    <string name="startCameraButton">Start Camera</string>
    <string name="startMapButton">Start Map</string>
    <string name="settingsButton">Settings</string>
    <string name="saveSettingButtonValue">save settings</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Star Capture</string>
    <string name="stop_capture">Stop Capture</string>

    <string name="title_activity_maps">MapsActivity</string>

</resources>