<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<!--    <data>-->
<!--        <variable-->
<!--            name="settingsFragment"-->
<!--            type="com.example.camerax.SettingsFragment" />-->
<!--    </data>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">



        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/languageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/language"
                    android:textAlignment="center"
                    android:textSize="25dp" />

                <Spinner
                    android:id="@+id/languageSpinner"
                    android:layout_width="115dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="35dp"
                    android:spinnerMode="dropdown" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/scoreThresholdTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scoreThreshold"
                    android:textAlignment="center"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/scoreThresholdValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="35dp"
                    android:ems="3"
                    android:text="0.2"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/strokeWidthTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bndboxStrokeWidth"
                    android:textAlignment="center"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/strokeWidthValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="35dp"
                    android:ems="3"
                    android:text="10"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/resultTextSizeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/resultsTextSize"
                    android:textAlignment="center"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/resultTextSizeValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="35dp"
                    android:ems="3"
                    android:text="50"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/maxDetectionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/maxDetecionsResult"
                    android:textAlignment="center"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/maxDetectionValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="35dp"
                    android:ems="3"
                    android:text="30"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/saveSettingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/saveSettingButtonValue"
            app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>