<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".TitleFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:text="Object Detection in \n Real Time" />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp">

        <Button
            android:id="@+id/startCameraButton"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:text="@string/startCameraButton"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@+id/startMapButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttons" />

        <Button
            android:id="@+id/startMapButton"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:text="@string/startMapButton"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@+id/settings_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startCameraButton"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_button"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="64dp"
            android:background="@drawable/rect_with_rounded_corners"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/startMapButton"
            app:layout_constraintBottom_toBottomOf="@+id/buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageButton2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/settings"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:text="@string/settingsButton"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

